// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstallPlugin should handle download action 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-10 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxhCb pcYUy fixed left-0 right-0 z-10 flex flex-col px-16 pt-6 pb-8 mx-auto mt-24 rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 mt-4 mr-4"
    >
      <button
        class="sc-AxjAm eYrebl"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="sc-AxiKw ksjdLL"
          height="10"
          width="10"
        >
          <svg>
            cross-slim.svg
          </svg>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2>
        Attention
      </h2>
      <div
        class="flex-1"
      >
        <div
          class="container"
        >
          <p
            class="mt-4 text-base font-semibold text-theme-neutral-dark"
          >
            This plugin needs the following permissions:
          </p>
          <ul
            class="max-w-xs mt-2 text-sm list-inside leading-8 list-circle text-theme-neutral-dark"
          >
            <li>
              Allows access to the Desktop Wallet alerts
            </li>
            <li>
              Allows access to play audio from within the Desktop Wallet
            </li>
            <li>
              Allows access to the Desktop Wallet events
            </li>
          </ul>
          <div
            class="flex justify-end mt-8"
          >
            <button
              class="sc-AxjAm gSuvFI mr-2"
              color="primary"
              data-testid="install-plugin__cancel-button"
              type="button"
            >
              Cancel
            </button>
            <button
              class="sc-AxjAm jTpTok"
              color="primary"
              data-testid="install-plugin__download-button"
              type="button"
            >
              Download
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InstallPlugin should handle download action 2`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-10 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxhCb pcYUy fixed left-0 right-0 z-10 flex flex-col px-16 pt-6 pb-8 mx-auto mt-24 rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 mt-4 mr-4"
    >
      <button
        class="sc-AxjAm eYrebl"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="sc-AxiKw ksjdLL"
          height="10"
          width="10"
        >
          <svg>
            cross-slim.svg
          </svg>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2>
        Downloaded
      </h2>
      <div
        class="flex-1"
      >
        <div
          class="container"
        >
          <div
            class="flex mt-4"
          >
            <div
              class="flex-shrink-0 mr-6"
            >
              <img
                class="rounded-xl"
                src="https://raw.githubusercontent.com/ark-ecosystem-desktop-plugins/explorer/master/images/logo.png"
              />
            </div>
            <div
              class="flex-1"
            >
              <div
                class="flex flex-col justify-around h-full"
              >
                <div>
                  <p
                    class="text-sm font-semibold text-theme-neutral-light"
                  >
                    Plugin
                  </p>
                  <p
                    class="font-semibold text-theme-black"
                  >
                    ARK Explorer
                  </p>
                </div>
                <div
                  class="flex justify-between"
                >
                  <span>
                    <p
                      class="text-sm font-semibold text-theme-neutral-light"
                    >
                      Downloaded
                    </p>
                    <p
                      class="text-sm font-bold text-theme-neutral-dark"
                    >
                      154 KB / 154 KB
                    </p>
                  </span>
                  <div
                    class="mr-2"
                  >
                    <svg
                      height="50"
                      viewBox="0 0 50 50"
                      width="50"
                    >
                      <circle
                        cx="25"
                        cy="25"
                        fill="transparent"
                        r="23"
                        stroke="var(--theme-color-success-200)"
                        stroke-width="4"
                      />
                      <circle
                        cx="25"
                        cy="25"
                        fill="transparent"
                        r="23"
                        stroke="var(--theme-color-success-600)"
                        stroke-dasharray="144.51326206513048"
                        stroke-dashoffset="31.792917654328704"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="4"
                        transform="rotate(-90 25 25)"
                      />
                      <text
                        data-testid="circular-progress-bar__percentage"
                        dy="0.3em"
                        fill="var(--theme-color-success-600)"
                        font-size="0.8rem"
                        font-weight="600"
                        text-anchor="middle"
                        x="50%"
                        y="50%"
                      >
                        78%
                      </text>
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InstallPlugin should handle download action 3`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-10 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxhCb pcYUy fixed left-0 right-0 z-10 flex flex-col px-16 pt-6 pb-8 mx-auto mt-24 rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 mt-4 mr-4"
    >
      <button
        class="sc-AxjAm eYrebl"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="sc-AxiKw ksjdLL"
          height="10"
          width="10"
        >
          <svg>
            cross-slim.svg
          </svg>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2>
        Downloaded
      </h2>
      <div
        class="flex-1"
      >
        <div
          class="container"
        >
          <div
            class="flex mt-4"
          >
            <div
              class="flex-shrink-0 mr-6"
            >
              <img
                class="rounded-xl"
                src="https://raw.githubusercontent.com/ark-ecosystem-desktop-plugins/explorer/master/images/logo.png"
              />
            </div>
            <div
              class="flex-1"
            >
              <div
                class="flex flex-col justify-around h-full"
              >
                <div>
                  <p
                    class="text-sm font-semibold text-theme-neutral-light"
                  >
                    Plugin
                  </p>
                  <p
                    class="font-semibold text-theme-black"
                  >
                    ARK Explorer
                  </p>
                </div>
                <div
                  class="flex justify-between"
                >
                  <span>
                    <p
                      class="text-sm font-semibold text-theme-neutral-light"
                    >
                      Downloaded
                    </p>
                    <p
                      class="text-sm font-bold text-theme-neutral-dark"
                    >
                      Completed
                    </p>
                  </span>
                  <div
                    class=""
                  >
                    <div
                      class="sc-AxirZ cPeJHU relative z-10 bg-theme-background border-theme-neutral-300"
                    >
                      <span
                        class="text-theme-success-600"
                      >
                        <div
                          class="sc-AxiKw gFRQxT"
                          height="28"
                          width="28"
                        >
                          <svg>
                            checkmark.svg
                          </svg>
                        </div>
                      </span>
                    </div>
                    <div
                      class="sc-AxirZ cPeJHU relative z-0 -ml-1 bg-theme-background border-theme-success-600"
                    >
                      <span
                        class="text-xs font-semibold text-theme-success-600"
                      >
                        100%
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex justify-end mt-8"
          >
            <button
              class="sc-AxjAm gSuvFI mr-2"
              color="primary"
              data-testid="install-plugin__cancel-button"
              type="button"
            >
              Cancel
            </button>
            <button
              class="sc-AxjAm jTpTok"
              color="primary"
              data-testid="install-plugin__install-button"
              type="button"
            >
              Install
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InstallPlugin should not render if not open 1`] = `<DocumentFragment />`;

exports[`InstallPlugin should render a modal 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-10 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxhCb pcYUy fixed left-0 right-0 z-10 flex flex-col px-16 pt-6 pb-8 mx-auto mt-24 rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 mt-4 mr-4"
    >
      <button
        class="sc-AxjAm eYrebl"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="sc-AxiKw ksjdLL"
          height="10"
          width="10"
        >
          <svg>
            cross-slim.svg
          </svg>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2>
        Attention
      </h2>
      <div
        class="flex-1"
      >
        <div
          class="container"
        >
          <p
            class="mt-4 text-base font-semibold text-theme-neutral-dark"
          >
            This plugin needs the following permissions:
          </p>
          <ul
            class="max-w-xs mt-2 text-sm list-inside leading-8 list-circle text-theme-neutral-dark"
          >
            <li>
              Allows access to the Desktop Wallet alerts
            </li>
            <li>
              Allows access to play audio from within the Desktop Wallet
            </li>
            <li>
              Allows access to the Desktop Wallet events
            </li>
          </ul>
          <div
            class="flex justify-end mt-8"
          >
            <button
              class="sc-AxjAm gSuvFI mr-2"
              color="primary"
              data-testid="install-plugin__cancel-button"
              type="button"
            >
              Cancel
            </button>
            <button
              class="sc-AxjAm jTpTok"
              color="primary"
              data-testid="install-plugin__download-button"
              type="button"
            >
              Download
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
